# blast-rs-llm

./: Cargo.toml  LICENSE.md  README.md
bench/: run_benchmark.sh
benches/: blast_bench.rs
blast-rs/blast-cli/src/: main.rs  output.rs
blast-rs/blast-core/src/: compo.rs  hsp.rs  lib.rs  mask.rs  matrix.rs  pssm.rs  search.rs  stats.rs  translate.rs
blast-rs/blast-db/src/: db.rs
disabled_github/workflows/: ci.yml
src/: compo.rs  extend.rs  hsp.rs  lib.rs  lookup.rs  main.rs  matrix.rs  search.rs
src/db/: blastdb.rs  builder.rs  oid_seqids.rs  oid_taxids.rs  sequence.rs
tests/: integration.rs  validate_vs_ncbi.sh
