[package]
name = "blast-rs"
version = "0.2.0"
edition = "2021"
license = "MIT OR Unlicense"
description = "Pure-Rust implementation of NCBI BLAST (Basic Local Alignment Search Tool)"
repository = "https://github.com/henriksson-lab/blast-rs"
homepage = "https://github.com/henriksson-lab/blast-rs"
keywords = ["bioinformatics", "blast", "alignment", "sequence", "genomics"]
categories = ["science", "command-line-utilities"]
readme = "README.md"
rust-version = "1.82"
exclude = [
    "ncbi-blast-2.17.0+-src/",
    "bench/results/",
    "bench/tmp/",
    "target/",
    ".cargo/",
]

[[bin]]
name = "blast-cli"
path = "src/main.rs"

[dependencies]
byteorder = "1"
memmap2 = "0.9"
lmdb = "0.8"
rayon = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "blast_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
